# SoundProcessor

./: CMakeLists.txt
src/: config_parser.cpp  config_parser.h  converter.h  converters_factory.cpp  converters_factory.h  custom_exceptions.h  error_codes.h  exceptions.h  main.cpp  processor.cpp  processor.h  streams.cpp  streams.h  utils.cpp  utils.h  wav.cpp  wav.h  wav_file.cpp  wav_file.h  wav_format_info.h
src/converters/: abstract_converter.h  all_converters.h  converters_utils.cpp  converters_utils.h  cut_converter.cpp  cut_converter.h  insert_converter.cpp  insert_converter.h  mix_converter.cpp  mix_converter.h  mute_converter.cpp  mute_converter.h  volume_converter.cpp  volume_converter.h
tests/: config_parser_tests.cpp  wav_tests.cpp
tests/config_files_for_tests/: all_correct_commands.txt
